--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HabitGraph!</title>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="MyApp" />
+    <meta name="apple-mobile-web-app-title" content="HabitGraph" />
   </head>
   <body>
     <div id="root"></div>
