fix ios top bar coloring

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <!-- Additional PWA Meta Tags -->
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="theme-color" content="#e7e5e4" />
-    <meta name="msapplication-navbutton-color" content="#e7e5e4" />
-    <meta name="msapplication-TileColor" content="#e7e5e4" />
+    <meta name="theme-color" content="#faf7f5" />
+    <meta name="msapplication-navbutton-color" content="#faf7f5" />
+    <meta name="msapplication-TileColor" content="#faf7f5" />
   </head>
   <body>
     <div id="root"></div>
